Basic functionality grav/col

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Buoyancy Simulation</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="assets/global_variables.js" defer></script>
+    <script src="assets/constants.js" defer></script>
     <script src="assets/extern.js" defer></script>
     <script src="assets/Block.js" defer></script>
+    <script src="assets/function.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 <body>
