--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Buoyancy Simulation</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="assets/global_variables.js" defer></script>
-    <script src="assets/constants.js" defer></script>
-    <script src="assets/extern.js" defer></script>
-    <script src="assets/collision.js" defer></script>
-    <script src="assets/gravity.js" defer></script>
-    <script src="assets/Block.js" defer></script>
-    <script src="assets/Scale.js" defer></script>
-    <script src="assets/function.js" defer></script>
-    <script src="assets/options.js" defer></script>
+    <script src="src/assets/global_variables.js" defer></script>
+    <script src="src/assets/constants.js" defer></script>
+    <script src="src/assets/extern.js" defer></script>
+    <script src="src/spec/collision.js" defer></script>
+    <script src="src/spec/gravity.js" defer></script>
+    <script src="src/objects/Block.js" defer></script>
+    <script src="src/objects/Scale.js" defer></script>
+    <script src="src/assets/function.js" defer></script>
+    <script src="src/spec/options.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -31,5 +31,7 @@
             <label for="visible-volume"> Show volume</label>
         </form>
     </div>
+
+    <div id="stage"></div>
 </body>
 </html>
