Build scene framework

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="src/objects/Scale.js" defer></script>
     <script src="src/assets/function.js" defer></script>
     <script src="src/spec/options.js" defer></script>
+    <script src="src/scenes/Scene.js" defer></script>
+    <script src="src/scenes/scene_handler.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 <body>
