Implement clean options

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 </head>
 <body>
     <div id="form-container">
-        <p id="container-label">Options:</p>
-        <div id="left-float">
-            <form id="form">
+        <!-- Contents credit to https://www.w3schools.com/howto/howto_js_popup_form.asp -->
+        <button class="open-button" onclick="openForm()">Simulation Settings</button>
+        <div class="form-popup" id="myForm">
+            <form class="form-container">
+              <h1>Simulation Settings</h1>
+            <div style="float: left">
                 <input type="checkbox" id="visible-mass" name="visible-mass">
                 <label for="visible-mass"> Show mass</label><br>
                 <input type="checkbox" id="visible-weight" name="visible-weight">
@@ -33,16 +36,17 @@
                 <label for="visible-density"> Show density</label><br>
                 <input type="checkbox" id="visible-volume" name="visible-volume">
                 <label for="visible-volume"> Show volume</label>
-            </form>
-        </div>
-        <div id="right-float">
-            <form>
+            </div>
+            <div style="float: right">
                 <input type="radio" id="same-mass" name="scene-select" value="Same Mass" checked="checked">
                 <label for="same-mass">Same Mass</label><br>
                 <input type="radio" id="same-volume" name="scene-select" value="Same Volume">
                 <label for="same-volume">Same Volume</label><br>
                 <input type="radio" id="same-density" name="scene-select" value="Same Density">
                 <label for="same-density">Same Density</label><br>
+            </div>
+          
+              <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
             </form>
         </div>
     </div>
