Proportional scaling of scales

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <div id="stage">
-        <div id="water-level"></div>
+        <div id="water-level"><div id="arrow-head"></div><div id="level-text"></div></div>
     </div>
 
 </body>
