--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="src/spec/collision.js" defer></script>
     <script src="src/spec/gravity.js" defer></script>
     <script src="src/spec/buoyancy.js" defer></script>
+    <script src="src/spec/force.js" defer></script>
     <script src="src/spec/waterLevel.js" defer></script>
     <script src="src/objects/Block.js" defer></script>
     <script src="src/objects/Scale.js" defer></script>
